# VulkanBase

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile.bat
include/: application.hpp  stx_device.hpp  stx_model.hpp  stx_pipeline.hpp  stx_swap_chain.hpp  stx_window.hpp
src/: application.cpp  main.cpp  stx_device.cpp  stx_model.cpp  stx_pipeline.cpp  stx_swap_chain.cpp  stx_window.cpp
